fix: 인스타 공유 버튼 폰트, 상단 margin, gap

--- a/src/styles/MyPage/MyProfile.css
+++ b/src/styles/MyPage/MyProfile.css
@@ -113,7 +113,7 @@
 .profile-card-container {
     display: flex;
     justify-content: center;
-    padding: 40px 40px 0px 40px;
+    padding: 26px 40px 0px 40px;
     width: 100%;
     margin-bottom: 26px;
 }
